<resources>
    <string name="app_name">MyFuelCloud</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="title_activity_register">Sign up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="login">login</string>
    <string name="error_getting_user">Error getting user</string>
    <string name="register_successful">User register successful</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brand">brand</string>
    <string name="model">model</string>
    <string name="year">year</string>
    <string name="new_vehicle">New vehicle</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="vehicle_added">Your vehicle was added</string>
    <string name="vehicle_not_added">Error adding your vehicle</string>
    <string name="vehicle">Vehicle</string>
    <string name="save">SAVE</string>
    <string name="delete">DELETE</string>
    <string name="vehicle_deleted">Vehicle deleted</string>
    <string name="vehicle_not_deleted">Vehicle not deleted</string>
    <string name="vehicle_updated">Vehicle updated</string>
    <string name="vehicle_not_updated">Vehicle not updated</string>
    <string name="new_refuel">New refuel</string>
    <string name="date">date</string>
    <string name="gas_price">gas price</string>
    <string name="gas_station">gas station</string>
    <string name="price_amount">price amount</string>
    <string name="fuel_amount">fuel amount</string>
    <string name="previous_distance">previous distance</string>
    <string name="refuel">Refuel</string>
    <string name="refuel_added">Your refuel was added</string>
    <string name="refuel_not_added">Error adding your refuel</string>
    <string name="refuel_deleted">Refuel deleted</string>
    <string name="refuel_not_deleted">Refuel not deleted</string>
    <string name="refuel_updated">Refuel updated</string>
    <string name="refuel_not_updated">Refuel not updated</string>
    <string name="add_vehicle_first">Please add a vehicle first</string>
    <string name="statistics">Statistics</string>
    <string name="price_amount_average">Price amount average:</string>
    <string name="fuel_amount_average">Fuel amount average:</string>
    <string name="fuel_consumption_average">Fuel consumption average:</string>
    <string name="cost_per_kilometer">Cost per kilometer:</string>
    <string name="previous_distance_average">Previous distance average:</string>
    <string name="gas_price_average">Gas price average:</string>
    <string name="log_out">Logout</string>
    <string name="log_out_confirmation">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
