<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#3F51B5"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:scaleType="center"
        android:text="@string/new_refuel"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

               <TextView
                   android:id="@+id/textViewDateTime"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="15/11/2015 13:31"
                   android:padding="10dp"/>

                <Button
                    android:id="@+id/buttonDateTimePicker"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="change"/>

            </LinearLayout>

            <Spinner
                android:id="@+id/dialog_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"/>

            <EditText
                android:id="@+id/dialog_gas_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif"
                android:hint="@string/gas_price"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/dialog_gas_station"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif"
                android:hint="@string/gas_station"
                android:inputType="text" />

            <EditText
                android:id="@+id/dialog_price_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif"
                android:hint="@string/price_amount"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/dialog_fuel_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif"
                android:hint="@string/fuel_amount"
                android:inputType="numberDecimal" />


            <EditText
                android:id="@+id/dialog_previous_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif"
                android:hint="@string/previous_distance"
                android:inputType="numberDecimal" />

        </android.support.v7.widget.LinearLayoutCompat>


    </ScrollView>


</LinearLayout>